alteraçao da cor do botao de sair

--- a/telainicial.kv
+++ b/telainicial.kv
@@ -187,6 +187,7 @@ FloatLayout:
         size_hint: 0.1,.07
         on_release: App.get_running_app().stop()
         background_color: utils.get_color_from_hex('#12a156')
-        # background_normal: ''
+        background_normal: ''
         bold: True
+        font_size: dp(18)
      #85c441 cor verde claro   utils.get_color_from_hex('#12a156')
