Adiçao de um cronometro e de eventos de inicio e pausa das mediçoes

--- a/telainicial.kv
+++ b/telainicial.kv
@@ -1,193 +1,206 @@
 #:import App kivy.app.App
 #:import utils kivy.utils
 
-FloatLayout:
-    canvas.before:
-        Color:
-            rgba: 1,1,1,1
-        Rectangle:
-            pos: self.pos
-            size: self.size
-    
-    Label:
-        text: 'Monitoramento'
-        bold: True
-        color: utils.get_color_from_hex('#12a156')
-        font_size: dp(30)
-        pos_hint: {'center_x': .25, 'center_y': .65}
-    
-    GridLayout:
-        padding: dp(10)
-        spacing: dp(10)
-        pos_hint: {'center_x': .25, 'center_y': .4}
-        size_hint: .4,.4
-        cols: 2
-        BoxLayout:
-            orientation: 'vertical'
-            padding: dp(15)
-            spacing: dp(8)
-            canvas.before:
-                Color:
-                    rgba: .1,.1,.1,1
-                Rectangle:
-                    size: self.size
-                    pos: self.pos
+<Manager>:
+    Interface:
 
-            Label:
-                text: 'teste'
-                size_hint_y: None
-                height: dp(10)
-            Label:
-                id: lb1
-                text: 'Texto'
-                font_size: 45
-                color: 1,1,1,1
-                bold: True
-            Label:
-                text: 'tempo'
-                id: info
-                size_hint_y: None
-                height: dp(10)
-                
-        BoxLayout:
-            orientation: 'vertical'
-            padding: dp(15)
-            spacing: dp(8)
-            canvas.before:
-                Color:
-                    rgba: .1,.1,.1,1
-                Rectangle:
-                    size: self.size
-                    pos: self.pos
-
-            Label:
-                text: 'teste'
-                size_hint_y: None
-                height: dp(10)
-            Label:
-                id: lb1
-                text: 'Texto'
-                font_size: 45
-                color: 1,1,1,1
-                bold: True
-            Label:
-                text: 'tempo'
-                id: info
-                size_hint_y: None
-                height: dp(10)
-                
-        BoxLayout:
-            orientation: 'vertical'
-            padding: dp(15)
-            spacing: dp(8)
-            canvas.before:
-                Color:
-                    rgba: .1,.1,.1,1
-                Rectangle:
-                    size: self.size
-                    pos: self.pos
-
-            Label:
-                text: 'teste'
-                size_hint_y: None
-                height: dp(10)
-            Label:
-                id: lb1
-                text: 'Texto'
-                font_size: 45
-                color: 1,1,1,1
-                bold: True
-            Label:
-                text: 'tempo'
-                id: info
-                size_hint_y: None
-                height: dp(10)
-                
-        BoxLayout:
-            orientation: 'vertical'
-            padding: dp(15)
-            spacing: dp(8)
-            canvas.before:
-                Color:
-                    rgba: .1,.1,.1,1
-                Rectangle:
-                    size: self.size
-                    pos: self.pos
-
-            Label:
-                text: 'teste'
-                size_hint_y: None
-                height: dp(10)
-            Label:
-                id: lb1
-                text: 'Texto'
-                font_size: 45
-                color: 1,1,1,1
-                bold: True
-            Label:
-                text: 'tempo'
-                id: info
-                size_hint_y: None
-                height: dp(10)
-                
-            
-    Widget:
-        canvas.before:
-            Color:
-                rgba: utils.get_color_from_hex('#12a156')
-            Line:
-                points: root.width/2, 0, root.width/2, root.height
-                width: dp(5)
-    Widget:
-        canvas.before:
-            Color:
-                rgba: utils.get_color_from_hex('#12a156')
-            Line:
-                points: 0, root.height*0.95, root.width, root.height*0.95
-                width: root.height*0.1
-    
-
-    Widget:
-        id: logo_cima
+<Interface>:
+    FloatLayout:
         canvas.before:
             Color:
                 rgba: 1,1,1,1
             Rectangle:
                 pos: self.pos
                 size: self.size
-        pos_hint: {'left': 1, 'top': 1}
-        size_hint: 0.4, 0.3
+        
+        Label:
+            text: 'Monitoramento'
+            bold: True
+            color: utils.get_color_from_hex('#12a156')
+            font_size: dp(30)
+            pos_hint: {'center_x': .25, 'center_y': .65}
+        
+        GridLayout:
+            padding: dp(10)
+            spacing: dp(10)
+            pos_hint: {'center_x': .25, 'center_y': .4}
+            size_hint: .4,.4
+            cols: 2
+            BoxLayout:
+                orientation: 'vertical'
+                padding: dp(15)
+                spacing: dp(8)
+                canvas.before:
+                    Color:
+                        rgba: .1,.1,.1,1
+                    Rectangle:
+                        size: self.size
+                        pos: self.pos
+
+                Label:
+                    text: 'teste'
+                    size_hint_y: None
+                    height: dp(10)
+                Label:
+                    id: lb1
+                    text: 'Texto'
+                    font_size: 45
+                    color: 1,1,1,1
+                    bold: True
+                Label:
+                    text: 'tempo'
+                    id: info
+                    size_hint_y: None
+                    height: dp(10)
+                    
+            BoxLayout:
+                orientation: 'vertical'
+                padding: dp(15)
+                spacing: dp(8)
+                canvas.before:
+                    Color:
+                        rgba: .1,.1,.1,1
+                    Rectangle:
+                        size: self.size
+                        pos: self.pos
+
+                Label:
+                    text: 'teste'
+                    size_hint_y: None
+                    height: dp(10)
+                Label:
+                    id: lb1
+                    text: 'Texto'
+                    font_size: 45
+                    color: 1,1,1,1
+                    bold: True
+                Label:
+                    text: 'tempo'
+                    id: info
+                    size_hint_y: None
+                    height: dp(10)
+                    
+            BoxLayout:
+                orientation: 'vertical'
+                padding: dp(15)
+                spacing: dp(8)
+                canvas.before:
+                    Color:
+                        rgba: .1,.1,.1,1
+                    Rectangle:
+                        size: self.size
+                        pos: self.pos
+
+                Label:
+                    text: 'teste'
+                    size_hint_y: None
+                    height: dp(10)
+                Label:
+                    id: lb1
+                    text: 'Texto'
+                    font_size: 45
+                    color: 1,1,1,1
+                    bold: True
+                Label:
+                    text: 'tempo'
+                    id: info
+                    size_hint_y: None
+                    height: dp(10)
+                    
+            BoxLayout:
+                orientation: 'vertical'
+                padding: dp(15)
+                spacing: dp(8)
+                canvas.before:
+                    Color:
+                        rgba: .1,.1,.1,1
+                    Rectangle:
+                        size: self.size
+                        pos: self.pos
+
+                Label:
+                    text: 'teste'
+                    size_hint_y: None
+                    height: dp(10)
+                Label:
+                    id: lb1
+                    text: 'Texto'
+                    font_size: 45
+                    color: 1,1,1,1
+                    bold: True
+                Label:
+                    text: 'tempo'
+                    id: info
+                    size_hint_y: None
+                    height: dp(10)
+                    
+                
+        Widget:
+            canvas.before:
+                Color:
+                    rgba: utils.get_color_from_hex('#12a156')
+                Line:
+                    points: root.width/2, 0, root.width/2, root.height
+                    width: dp(5)
+        Widget:
+            canvas.before:
+                Color:
+                    rgba: utils.get_color_from_hex('#12a156')
+                Line:
+                    points: 0, root.height*0.95, root.width, root.height*0.95
+                    width: root.height*0.1
+        
+
+        Widget:
+            id: logo_cima
+            canvas.before:
+                Color:
+                    rgba: 1,1,1,1
+                Rectangle:
+                    pos: self.pos
+                    size: self.size
+            pos_hint: {'left': 1, 'top': 1}
+            size_hint: 0.4, 0.3
+            Image:
+                source: 'data/logo_grande.png'
+                pos: logo_cima.pos[0], logo_cima.pos[1]+dp(15)
+                size: logo_cima.size
+                
+        
         Image:
-            source: 'data/logo_grande.png'
-            pos: logo_cima.pos[0], logo_cima.pos[1]+dp(15)
-            size: logo_cima.size
-            
-    
-    Image:
-        source: 'data/fotovoltaica.png'
-        # size: self.texture_size[0]*0.3, self.texture_size[1]*0.3
-        #pos_hint: {'center_x': self.texture_size[0]/2+root.width/2, 'center_y': self.texture_size[1]/2}
-        size_hint: .23,.23
-        pos_hint: {'center_x': .63, 'center_y': .1}
-        #allow_stretch: True
+            source: 'data/fotovoltaica.png'
+            # size: self.texture_size[0]*0.3, self.texture_size[1]*0.3
+            #pos_hint: {'center_x': self.texture_size[0]/2+root.width/2, 'center_y': self.texture_size[1]/2}
+            size_hint: .23,.23
+            pos_hint: {'center_x': .63, 'center_y': .1}
+            #allow_stretch: True
 
-    Image:
-        source: 'data/logo_pequeno.png'
-        pos_hint: {'right': 1.035, 'botton': 1}
-        size_hint: .2,.2
+        Image:
+            source: 'data/logo_pequeno.png'
+            pos_hint: {'right': 1.035, 'botton': 1}
+            size_hint: .2,.2
 
-    Image:
-        source: 'data/turbina.png'
-        pos_hint: {'right': 1.15, 'botton': 1}
-        size_hint: .6,.6
+        Image:
+            source: 'data/turbina.png'
+            pos_hint: {'right': 1.15, 'botton': 1}
+            size_hint: .6,.6
 
-    Button:
-        text: 'Sair'
-        pos_hint: {'top':1 , 'right':1}
-        size_hint: 0.1,.07
-        on_release: App.get_running_app().stop()
-        background_color: utils.get_color_from_hex('#12a156')
-        background_normal: ''
-        bold: True
-        font_size: dp(18)
-     #85c441 cor verde claro   utils.get_color_from_hex('#12a156')
+        Button:
+            text: 'Sair'
+            pos_hint: {'top':1 , 'right':1}
+            size_hint: 0.1,.07
+            on_release: App.get_running_app().stop()
+            background_color: utils.get_color_from_hex('#12a156')
+            background_normal: ''
+            bold: True
+            font_size: dp(18)
+        
+        Label:
+            id: tempo
+            text: '00:00:00'
+            pos_hint: {'right': 1, 'top': .85}
+            size_hint: .2,.1
+            font_size: dp(30)
+            color: 0,0,0,1
+            bold: True
+        #85c441 cor verde claro   utils.get_color_from_hex('#12a156')
