preparaçao dos Labels descritivos

--- a/telainicial.kv
+++ b/telainicial.kv
@@ -38,7 +38,7 @@
                         pos: self.pos
 
                 Label:
-                    text: 'teste'
+                    text: 'LDR'
                     size_hint_y: None
                     height: dp(10)
                 Label:
@@ -49,7 +49,7 @@
                     bold: True
                 Label:
                     id: lb2
-                    text: 'tempo'
+                    text: 'tensão'
                     id: info
                     size_hint_y: None
                     height: dp(10)
@@ -66,7 +66,7 @@
                         pos: self.pos
 
                 Label:
-                    text: 'teste'
+                    text: 'Painél Solar'
                     size_hint_y: None
                     height: dp(10)
                 Label:
@@ -76,7 +76,7 @@
                     color: 1,1,1,1
                     bold: True
                 Label:
-                    text: 'tempo'
+                    text: 'corrente'
                     id: info
                     size_hint_y: None
                     height: dp(10)
@@ -93,7 +93,7 @@
                         pos: self.pos
 
                 Label:
-                    text: 'teste'
+                    text: 'Turbina Eólica'
                     size_hint_y: None
                     height: dp(10)
                 Label:
@@ -103,7 +103,7 @@
                     color: 1,1,1,1
                     bold: True
                 Label:
-                    text: 'tempo'
+                    text: 'corrente'
                     id: info
                     size_hint_y: None
                     height: dp(10)
@@ -120,9 +120,10 @@
                         pos: self.pos
 
                 Label:
-                    text: 'teste'
+                    text: 'Sensor de Temperatura'
                     size_hint_y: None
                     height: dp(10)
+                    font_size: dp(13)
                 Label:
                     id: lb3
                     text: 'Texto4'
@@ -130,7 +131,7 @@
                     color: 1,1,1,1
                     bold: True
                 Label:
-                    text: 'tempo'
+                    text: 'temperatura'
                     id: info
                     size_hint_y: None
                     height: dp(10)
