arredondamento dos valores apresentados

--- a/telainicial.kv
+++ b/telainicial.kv
@@ -43,7 +43,7 @@
                     height: dp(10)
                 Label:
                     id: lb0
-                    text: 'Texto1'
+                    text: '0.00'
                     font_size: 45
                     color: 1,1,1,1
                     bold: True
@@ -71,7 +71,7 @@
                     height: dp(10)
                 Label:
                     id: lb1
-                    text: 'Texto2'
+                    text: '0.00'
                     font_size: 45
                     color: 1,1,1,1
                     bold: True
@@ -98,7 +98,7 @@
                     height: dp(10)
                 Label:
                     id: lb2
-                    text: 'Texto3'
+                    text: '0.00'
                     font_size: 45
                     color: 1,1,1,1
                     bold: True
@@ -126,7 +126,7 @@
                     font_size: dp(13)
                 Label:
                     id: lb3
-                    text: 'Texto4'
+                    text: '0.00'
                     font_size: 45
                     color: 1,1,1,1
                     bold: True
