Adiçao da logica GPIO do switch

--- a/telainicial.kv
+++ b/telainicial.kv
@@ -255,7 +255,7 @@
             Switch:             
                 id: switch   
                 size_hint: 1,.1
-                on_touch_down: root.motor()
+                on_touch_down: root.motor(self.active)
                 
             
         #85c441 cor verde claro   utils.get_color_from_hex('#12a156')
